tests/integration/snapshots/integration__conformance__i_string_lone_utf8_continuation_byte.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
raw bytes: [91, 34, 129, 34, 93]
stdout ---

stderr ---
error: byte 0x81 cannot start a UTF-8 sequence
 --> stdin:1:3
  |
1 | ["�"]
  |   ^
