tests/integration/snapshots/integration__conformance__n_array_a_invalid_utf8.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [91, 97, 229, 93]
stdout ---

stderr ---
error: expected a continuation byte, found 0x5D
 --> stdin:1:3
  |
1 | [a�]
  |   ^
