tests/integration/snapshots/integration__conformance__n_array_comma_after_close.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[""],
stderr ---
error: unexpected token `,` after json finished
 --> stdin:1:5
  |
1 | [""],
  |     ^
  |
help: consider removing the trailing content (starting with `,`)
  |
1 - [""],
1 + [""]
  |
