tests/integration/snapshots/integration__conformance__n_array_comma_and_number.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
[,1]
stderr ---
error: expected entry or closed delimiter `]`, found `,`
 --> stdin:1:2
  |
1 | [,1]
  | -^
  | |
  | expected due to `[`
